Fix duplicate nodes Except the first and last node exist in the dataset which are not necessary to be added again, some intermediate nodes might also be duplicated in case of arc process failures. To avoid such duplication, refactored the logic for adding nodes. Now the Generator returns List<Node> directly rather than only giving lonlats (and the Action class adding nodes according to the lonlats then).